--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <div id="quiz">
                 <h1>Coding Quiz Challenge</h1>
                 <div class="quiz-header">
-                    <p id="progress">Question 1 of 5</p>
-                    <p id="count-down"></p>
+                    <p id="progress">Question 1 to 5</p>
+                    <p id="count-down">Time:10</p>
 
                 </div>
                 <p id="question"></p>
